[project]
name = "hcc-survival-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Zen",email = "a1234567891934@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
